--- a/index.html
+++ b/index.html
@@ -1,117 +1,79 @@
 <!DOCTYPE html>
 <html lang="fa">
 <head>
-  <meta charset="UTF-8" />
-  <title>نظرسنجی آمار و احتمال</title>
+  <meta charset="UTF-8">
+  <title>نظرسنجی کتاب</title>
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Lalezar&display=swap');
     body {
-      font-family: 'Lalezar', cursive;
+      font-family: "Lalezar", sans-serif;
+      background: #f9f9f9;
       text-align: center;
-      direction: rtl;
-      background-color: #f5f5f5;
+      padding: 50px;
     }
-    h1 {
-      color: #2c3e50;
-    }
-    form, .results {
-      background: white;
-      padding: 20px;
-      margin: 20px auto;
-      width: 90%;
-      max-width: 400px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 12px;
-    }
-    input, button, select {
-      font-family: inherit;
-      font-size: 1.2em;
+    input, select, button {
+      margin: 10px;
       padding: 10px;
-      margin: 10px 0;
-      width: 100%;
-      box-sizing: border-box;
+      font-family: inherit;
+      font-size: 18px;
     }
-    .results table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    .results th, .results td {
-      border: 1px solid #ddd;
-      padding: 8px;
-    }
-    .results th {
-      background-color: #f0f0f0;
+    #message {
+      margin-top: 20px;
+      font-weight: bold;
+      color: green;
     }
   </style>
+  <link href="https://fonts.googleapis.com/css2?family=Lalezar&display=swap" rel="stylesheet">
 </head>
 <body>
-  <h1>نظرسنجی کتاب آمار و احتمال یازدهم</h1>
-  <form id="pollForm">
-    <input type="text" id="name" name="name" placeholder="نام و نام خانوادگی" required />
-    <select id="option" name="option" required>
-      <option value="">-- انتخاب کنید --</option>
-      <option value="خیلی سبز">خیلی سبز</option>
-      <option value="سفیرخرد">سفیرخرد</option>
-      <option value="نشرالگو">نشرالگو</option>
-    </select>
-    <button type="submit">ثبت رأی</button>
-  </form>
 
-  <div class="results" id="results">
-    <h2>نتایج</h2>
-    <table id="resultsTable">
-      <tr>
-        <th>نام</th>
-        <th>انتخاب</th>
-        <th>زمان</th>
-      </tr>
-    </table>
-  </div>
+  <h1>نظرسنجی بهترین انتشارات</h1>
+
+  <input type="text" id="name" placeholder="نام و نام خانوادگی" required />
+  <br>
+  <select id="option" required>
+    <option value="">-- انتخاب کنید --</option>
+    <option value="خیلی سبز">خیلی سبز</option>
+    <option value="سفیرخرد">سفیرخرد</option>
+    <option value="نشرالگو">نشرالگو</option>
+  </select>
+  <br>
+  <button onclick="submitVote()">ثبت رأی</button>
+
+  <div id="message"></div>
 
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbySDY5Zsw5CnN-MUflzbK_IaG7CBKLgLHrsfPXXZnouQKR6x-X_-rfhMjpKjl-J7Qxmqw/exec';
+    function submitVote() {
+      const name = document.getElementById("name").value.trim();
+      const option = document.getElementById("option").value;
 
-    document.getElementById('pollForm').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const name = document.getElementById('name').value;
-      const option = document.getElementById('option').value;
-      const res = await fetch(scriptURL, {
-        method: 'POST',
-        body: JSON.stringify({ name, option }),
-        headers: { 'Content-Type': 'application/json' }
-      });
-      if (res.ok) {
-        alert('رأی شما با موفقیت ثبت شد!');
-        document.getElementById('pollForm').reset();
-        loadResults();
-      } else {
-        alert('خطا در ثبت رأی.');
+      if (!name || !option) {
+        document.getElementById("message").textContent = "لطفاً همه فیلدها را پر کنید.";
+        return;
       }
-    });
 
-    async function loadResults() {
-      const res = await fetch(scriptURL);
-      const data = await res.json();
-      const table = document.getElementById('resultsTable');
-      table.innerHTML = `
-        <tr>
-          <th>نام</th>
-          <th>انتخاب</th>
-          <th>زمان</th>
-        </tr>
-      `;
-      data.forEach(row => {
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${row.name}</td>
-          <td>${row.option}</td>
-          <td>${new Date(row.timestamp).toLocaleString('fa-IR')}</td>
-        `;
-        table.appendChild(tr);
+      fetch("https://script.google.com/macros/s/AKfycbySDY5Zsw5CnN-MUflzbK_IaG7CBKLgLHrsfPXXZnouQKR6x-X_-rfhMjpKjl-J7Qxmqw/exec", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({
+          name: name,
+          option: option
+        })
+      })
+      .then(res => res.json())
+      .then(data => {
+        if (data.result === "success") {
+          document.getElementById("message").textContent = "رأی شما با موفقیت ثبت شد!";
+        } else {
+          document.getElementById("message").textContent = "خطا در ثبت رأی: " + data.message;
+        }
+      })
+      .catch(err => {
+        document.getElementById("message").textContent = "خطا در ارتباط با سرور!";
+        console.error(err);
       });
     }
-
-    loadResults();
   </script>
 </body>
 </html>
