--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       })
       .then(res => res.text())
       .then(msg => alert(msg))
-      .catch(() => alert("❌ خطا در ارتباط با سرور"));
+      .catch(() => alert("❌ مشکل در ارتباط با سرور"));
     }
   </script>
 </body>
